--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <button type="submit">Submit</button>
         </form>
         <p id="message"></p>
+        <h2>📖 Ebook List</h2>
     </div>
+
+    <div id="ebookList"></div>
     <script src="script.js"></script>
 </body>
 </html>
