--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <button type="submit">Submit</button>
         </form>
         <p id="message"></p>
+        
         <h2>📖 Ebook List</h2>
+        <div id="ebookList"></div> <!-- ✅ This is important -->
     </div>
 
-    <div id="ebookList"></div>
     <script src="script.js"></script>
 </body>
 </html>
